--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <script> (function (w, d, s, u) {let j = d.createElement(s); j.async = true; j.src ="https://dev-assets.channelboost.com/scripts/embeddingwidget.js?uid=" +u; let f = d.getElementsByTagName(s)[0]; f.parentNode.insertBefore(j, f);})(window, document, "script", "1bcd4fca-7e19-4bbc-add6-3dd725e1d250");</script>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>My Small Website</title>
@@ -56,7 +57,7 @@
       <a href="#">Contact</a>
     </nav>
   </header>
-
+<div id="74b0ef09-4276-1ea8-034e-0197c0449914" ></div>
   <main>
     <section>
       <h2>About This Site</h2>
